# rs-secret-santa

./: .gitignore  Cargo.toml  README.md
config/: current.conf  sample.conf
migrations/: 0001.initial_commit.up.sql
src/: admin.rs  assignment.rs  main.rs  structs.rs
src/templates/: base.html
src/templates/assignment/: assignment.html
