[package]
name = "rs-secret-santa"
version = "0.1.0"
authors = ["Casper Van Gheluwe <caspervg@gmail.com>"]

[dependencies]
rustful = "0.9"
rand = "0.3.15"
uuid = { version = "0.3", features = ["rustc-serialize", "v4"] }
rustc-serialize = "0.3.22"
log = "0.3.6"
env_logger = "0.3.5"
config = "~0.1.0"
postgres = { version = "0.13.4", features = ["with-uuid"] }
unicase = "1.4"
tera = "0.6.2"
lazy_static = "0.2"
serde_json = "0.8"
chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }